--- a/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.tmpl.html
+++ b/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.tmpl.html
@@ -22,7 +22,7 @@
         <div layout-align="start center" layout="row">
             <div layout="row" style="margin-right: 5px">
                 <md-icon md-svg-icon="action:ic_search_24px" class="sp-accent"></md-icon>
-                <input type="text" ng-model="ctrl.elName" placeholder="Find Element"
+                <input type="text" ng-model="ctrl.elementFilter" placeholder="Find Element"
                        style="background-color:#f6f6f6;border: none;border-bottom: solid 2px rgb(27, 20, 100);">&nbsp;
             </div>
             <div layout="row">
@@ -68,7 +68,7 @@
     <!-- selectFilter:ctrl.selectedOptions | -->
     <span id="{{ element.name }}" ng-mouseover="ctrl.updateMouseOver(element.name)"
           ng-mouseleave="ctrl.updateMouseOver('')"
-          ng-repeat="element in ctrl.currentElements |  selectFilter:ctrl.selectedOptions | elementNameFilter:ctrl.elName | orderBy: 'name'"
+          ng-repeat="element in ctrl.currentElements |  selectFilter:ctrl.selectedOptions | elementNameFilter:ctrl.elementFilter | orderBy: 'name'"
           my-data-bind class="draggable-icon tt"
           ng-class="element.type">
         <span id="container" style="position:relative;display:block;width:80px;height:80px;">
