--- a/ui/src/app/editor/components/customoutput/propertyselection/property-selection.tmpl.html
+++ b/ui/src/app/editor/components/customoutput/propertyselection/property-selection.tmpl.html
@@ -17,7 +17,8 @@
   -->
 
 <div class="property-selection" style="margin-left:{{ctrl.layer*5}}%">
-    <md-checkbox style="margin-bottom:0px;" ng-checked="ctrl.exists(ctrl.eventProperty.properties.runtimeId)" ng-click="ctrl.toggle(ctrl.eventProperty.properties.runtimeId)">
+    <md-checkbox style="margin-bottom:0px;" ng-checked="ctrl.exists(ctrl.eventProperty.properties.runtimeId)"
+                 ng-click="ctrl.toggle(ctrl.eventProperty.properties.runtimeId)" ng-disabled="ctrl.restrictedEditMode">
         <div ng-if="ctrl.eventProperty.properties.label"><b>{{ctrl.eventProperty.properties.label}}</b> <i>({{ctrl.eventProperty.properties.description}},
             field name: {{ctrl.eventProperty.properties.runtimeName}})</i><br/></div>
         <div ng-if="!ctrl.eventProperty.properties.label"><b>{{ctrl.eventProperty.properties.runtimeName}}</b><br/>
