--- a/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.tmpl.html
+++ b/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.tmpl.html
@@ -18,7 +18,7 @@
 
 <div ng-show="ctrl.currentMouseOverElement==ctrl.pipelineElement.payload.DOM" class="sp-fade-options">
     <span class="options-button customize-button" ng-show="ctrl.pipelineElement.type!='stream'" style="z-index:10">
-        <md-button ng-click="ctrl.openCustomizeDialog()" ng-disabled="!ctrl.isRootElement()" class="md-icon-button"
+        <md-button ng-click="ctrl.openCustomizeDialog()" class="md-icon-button"
                    style="margin:0px;font-size:20px;">
             <i class="material-icons">settings</i>
             <md-tooltip md-direction="top">
