--- a/ui/src/app/editor/components/mappingnary/mappingnary.tmpl.html
+++ b/ui/src/app/editor/components/mappingnary/mappingnary.tmpl.html
@@ -17,17 +17,17 @@
   -->
 
 <div flex="100" layout="row" layout-align="start center" style="margin-bottom:15px;">
-    <sp-button sp-button-blue sp-button-small-padding ng-click="ctrl.selectAll()">
+    <sp-button sp-button-blue sp-button-small-padding ng-click="ctrl.selectAll()" ng-disabled="ctrl.restrictedEditMode">
         Select all
     </sp-button>&nbsp;&nbsp;
-    <sp-button sp-button-gray sp-button-small-padding ng-click="ctrl.deselectAll()">
+    <sp-button sp-button-gray sp-button-small-padding ng-click="ctrl.deselectAll()" ng-disabled="ctrl.restrictedEditMode">
         Select none
     </sp-button>
 </div>
 <div
         ng-repeat="property in ctrl.availableProperties | displayRecommendedFilter: ctrl.staticProperty.properties.propertyScope:ctrl.displayRecommended">
     <md-checkbox ng-checked="ctrl.exists(property, ctrl.staticProperty)"
-                 ng-click="ctrl.toggle(property, ctrl.staticProperty)" name="{{property.properties.elementId}}">
+                 ng-click="ctrl.toggle(property, ctrl.staticProperty)" name="{{property.properties.elementId}}" ng-disabled="ctrl.restrictedEditMode">
         <div ng-if="property.properties.label"><b>{{property.properties.label}}</b> <i>({{property.properties.description}},
             field name: {{property.properties.runtimeName}})</i><br/></div>
         <div ng-if="!property.properties.label"><b>{{property.properties.runtimeName}}</b><br/></div>
