Fix css for data explorer

--- a/ui/src/app/data-explorer-v2/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer-v2/components/panel/data-explorer-dashboard-panel.component.html
@@ -34,5 +34,5 @@
             [viewDateRange]="viewDateRange"
             (updateCallback)="updateAndQueueItemForDeletion($event)"
             (deleteCallback)="removeAndQueueItemForDeletion($event)"
-            class="h-100"></sp-data-explorer-dashboard-grid>
+            class="h-100 dashboard-grid"></sp-data-explorer-dashboard-grid>
 </div>
