--- a/ui/src/app/data-explorer-v2/data-explorer-v2.component.css
+++ b/ui/src/app/data-explorer-v2/data-explorer-v2.component.css
@@ -19,3 +19,12 @@
 .mr-20 {
     margin-right:20px;
 }
+
+.dashboard-panel {
+    height: 100%;
+    flex-direction: column;
+    box-sizing: border-box;
+    display: flex;
+    flex: 1 1 100%;
+    overflow-y: auto;
+}
