--- a/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
+++ b/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
@@ -56,7 +56,7 @@
             </sp-image-annotations>
         </div>
         <br />
-        <br />
+        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum + 1}}</div></div>
         <sp-image-bar style="width: 100%"
                 [imagesSrcs]="imagesSrcs"
                 [selectedIndex]="imagesIndex"
