--- a/ui/src/app/core-ui/image/image-categorize/image-categorize.component.html
+++ b/ui/src/app/core-ui/image/image-categorize/image-categorize.component.html
@@ -36,13 +36,17 @@
                         </mat-chip>
                     </mat-chip-list>
                 </div>
-                <sp-image-container
-                        [imageSrc]="imagesSrcs[imagesIndex]">
-                </sp-image-container>
+                <div fxLayout="column" fxLayoutAlign="space-between " >
+                    <button mat-button (click)="save()"> <mat-icon>save</mat-icon></button>
+
+                    <sp-image-container
+                            [imageSrc]="imagesSrcs[imagesIndex]">
+                    </sp-image-container>
+                </div>
             </div>
         </div>
         <br />
-        <br />
+        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum + 1}}</div></div>
         <sp-image-bar style="width: 100%"
                       [imagesSrcs]="imagesSrcs"
                       [selectedIndex]="imagesIndex"
