- create image labeling app - improve image labeling tool usability - label can be drawn on top of an existing label

--- a/ui/src/app/app-overview/app-overview.component.html
+++ b/ui/src/app/app-overview/app-overview.component.html
@@ -49,4 +49,6 @@
     </div>
     <app-asset-monitoring (appOpened)="appOpened($event)"
                           *ngIf="currentlySelectedApp === apps[0].appId"></app-asset-monitoring>
+    <app-image-labeling (appOpened)="appOpened($event)"
+                          *ngIf="currentlySelectedApp === apps[1].appId"></app-image-labeling>
 </div>
