--- a/ui/src/app/app-image-labeling/app-image-labeling.component.css
+++ b/ui/src/app/app-image-labeling/app-image-labeling.component.css
@@ -16,7 +16,10 @@
  *
  */
 
-.imageBar {
-    height: 70px;
-    width: 1000px;
+.page-container-padding {
+    width:100%;
+}
+
+.page-container-padding-inner {
+    padding: 10px;
 }
