Integrate 'timeseries labeling tool' into new data explorer component

--- a/ui/src/app/data-explorer-v2/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/line-chart/line-chart-widget.component.html
@@ -37,11 +37,13 @@
 
             <!-- Chart -->
             <plotly-plot fxFlex
-                         *ngIf="showData"
+                         *ngIf="data !== undefined"
                          flex
                          [data]="data"
                          [layout]="graph.layout"
-                         (relayout)="zoomIn($event)">
+                         [config]="graph.config"
+                         (relayout)="handleDefaultModeBarButtonClicks($event)"
+                         (selecting)="selectDataPoints($event)">
             </plotly-plot>
 
         </div>
