--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -64,3 +64,9 @@
 @import './sp/stepper';
 
 @import './sp/colors.scss';
+
+@import '~codemirror/lib/codemirror.css';
+@import '~codemirror/theme/darcula.css';
+@import '~codemirror/theme/dracula.css';
+@import '~codemirror/addon/hint/show-hint.css';
+@import '~codemirror/addon/lint/lint.css';
