1st task "pallet"
1st task "pallet"

--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -94,6 +94,12 @@
                                  [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></traffic-light-widget>
                 </div>
+                <div *ngIf="widget.widgetType === 'pallet'" class="h-100 p-0">
+                    <app-renderer [gridsterItemComponent]="gridsterItemComponent"
+                                 [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                                 [widgetConfig]="configuredWidget"
+                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></app-renderer>
+                </div>
             </div>
         </div>
     </div>
