--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -39,7 +39,7 @@
 @import '~leaflet/dist/leaflet.css';
 @import '~material-design-icons/iconfont/material-icons.css';
 
-@import '../assets/fonts/Roboto-Regular.css';
+@import '~roboto-fontface/css/roboto/roboto-fontface.css';
 
 @import './sp/shepherd-new';
 
