Change arrows to select time range

--- a/ui/src/app/data-explorer-v2/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/line-chart/line-chart-widget.component.html
@@ -40,7 +40,7 @@
 
             <!-- Chart -->
             <plotly-plot fxFlex
-                         *ngIf="data !== undefined"
+                         *ngIf="data !== undefined && !showNoDataInDateRange"
                          flex
                          [data]="data"
                          [layout]="graph.layout"
