--- a/ui/src/app/data-explorer-v2/components/time-selector/timeRangeSelector.component.html
+++ b/ui/src/app/data-explorer-v2/components/time-selector/timeRangeSelector.component.html
@@ -17,7 +17,10 @@
   -->
 
 <div flex layout-fill layout="row" layout-align="start center" style="padding-top: 5px;">
-    <Button (click)="decreaseStart()"><</Button>
+<!--    <Button (click)="decreaseTime()"><</Button>-->
+    <button mat-icon-button class="icon" style="margin-right: -15px">
+        <mat-icon style="font-size: 30px;height: 30px; width: 30px; padding-top: 3px" (click)="decreaseTime()">navigate_before</mat-icon>
+    </button>
     <mat-form-field appearance="outline" class="start-date">
         <mat-label>Start</mat-label>
         <input matInput
@@ -27,9 +30,6 @@
                (dateTimeChange)="changeCustomDateRange()">
         <owl-date-time #dt1></owl-date-time>
     </mat-form-field>
-    <Button (click)="increaseStart()">></Button>
-    &nbsp;
-    <Button (click)="decreaseEnd()"><</Button>
     <mat-form-field  appearance="outline" class="end-date">
         <mat-label>End</mat-label>
         <input matInput
@@ -39,8 +39,11 @@
                (dateTimeChange)="changeCustomDateRange()">
         <owl-date-time #dt2></owl-date-time>
     </mat-form-field>
-    <Button (click)="increaseEnd()">></Button>
-    &nbsp;
+    <button mat-icon-button class="icon" style="margin-left: -15px" color="primary">
+        <mat-icon style="font-size: 30px;height: 30px; width: 30px; padding-top: 3px" (click)="increaseTime()">navigate_next</mat-icon>
+    </button>
+<!--    <Button (click)="increaseTime()">></Button>-->
+<!--    &nbsp;-->
     <button mat-raised-button
             *ngFor="let item of possibleTimeButtons"
             [color]="selectedTimeButton.value === item.value ? 'primary' : ''"
