--- a/ui/src/app/app-overview/app-overview.component.html
+++ b/ui/src/app/app-overview/app-overview.component.html
@@ -51,4 +51,6 @@
                           *ngIf="currentlySelectedApp === apps[0].appId"></app-asset-monitoring>
     <app-image-labeling (appOpened)="appOpened($event)"
                           *ngIf="currentlySelectedApp === apps[1].appId"></app-image-labeling>
+    <app-new-app (appOpened)="appOpened($event)"
+                          *ngIf="currentlySelectedApp === apps[2].appId"></app-new-app>
 </div>
