--- a/ui/src/app/editor-v2/editor.component.html
+++ b/ui/src/app/editor-v2/editor.component.html
@@ -37,7 +37,7 @@
                                          element-filter="ctrl.elementFilter">
             </pipeline-element-icon-stand>
         </div>
-<!--        <pipeline-assembly raw-pipeline-model="ctrl.rawPipelineModel" all-elements="ctrl.allElements"-->
-<!--                           current-modified-pipeline-id="ctrl.currentModifiedPipelineId"></pipeline-assembly>-->
+        <pipeline-assembly [rawPipelineModel]="rawPipelineModel" [allElements]="allElements"
+                           [currentModifiedPipelineId]="currentModifiedPipelineId"></pipeline-assembly>
     </div>
 </div>
