--- a/ui/src/scss/sp/main.scss
+++ b/ui/src/scss/sp/main.scss
@@ -789,6 +789,7 @@ md-select.md-default-theme .md-select-value.md-select-placeholder, md-select .md
   margin-top: 5px;
   box-shadow: 1px 1px 2px #555;
   text-align: center;
+  z-index:200;
 }
 
 .block {
