--- a/ui/src/app/editor-v2/components/pipeline-assembly/pipeline-assembly.component.html
+++ b/ui/src/app/editor-v2/components/pipeline-assembly/pipeline-assembly.component.html
@@ -102,14 +102,14 @@
         </div>
     </div>
     <div id="outerAssemblyArea" class="outerAssembly sp-blue-border-nopadding">
-        <div mwlDroppable id="assembly" class="canvas" (drop)="elementDropped($event)">
-<!--            <pipeline pipeline-valid="ctrl.pipelineValid"-->
-<!--                      canvas-id="assembly"-->
-<!--                      raw-pipeline-model="ctrl.rawPipelineModel"-->
-<!--                      all-elements="ctrl.allElements"-->
-<!--                      preview="false"-->
-<!--                      pipeline-cached="ctrl.pipelineCached"-->
-<!--                      pipeline-cache-running="ctrl.pipelineCacheRunning"></pipeline>-->
+        <div id="assembly" class="canvas">
+            <pipeline [pipelineValid]="pipelineValid"
+                      [canvasId]="'assembly'"
+                      [rawPipelineModel]="rawPipelineModel"
+                      [allElements]="allElements"
+                      [preview]="false"
+                      [pipelineCached]="pipelineCached"
+                      [pipelineCacheRunning]="pipelineCacheRunning"></pipeline>
         </div>
     </div>
 </div>
